Modified templates to display posts from database.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,15 +4,17 @@
     </head>
     <body>
         <div>
-            <h1><a href="/">Django Girls Blog</a></h1>
+            <h1><a href="/">プロ野球選手別応援歌</a></h1>
         </div>
         
-        {% for post in posts %}
-            <div>
-                <p>published: {{ post.published_date }}</p>
-                <h2><a href="">{{ post.title }}</a></h2>
-                <p>{{ post.text|linebreaksbr }}</p>
-            </div>
-        {% endfor %}
+        <div>
+           {{posts}}
+        </div>
+
+        <div>
+            <p>公開日: 2014/06/14, 12:14</p>
+            <h2><a href="">2番目の投稿</a></h2>
+            <p> こんにちは！ よろしくお願いします！ </p>
+        </div>
     </body>
 </html>
