--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,10 +1,10 @@
 h1 a, h2 a {
-    color: #C25100;
+    color: #0000cd;
     font-family: 'Lobster';
 }
 
 .page-header {
-    background-color: #C25100;
+    background-color: #0000cd;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
