--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,7 +12,7 @@
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             {% endif %}
-            <h1><a href="/">SHAT website</a></h1>
+            <h1><a href="/">SHAT website</a></h1>   //最も重要性の高い見出し
         </div>
         <div class="content container">
             <div class="row">
