--- a/templates/pdfmr/top.html
+++ b/templates/pdfmr/top.html
@@ -3,7 +3,7 @@
 <html lang="ja"><head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>クールイメージビジネスサイトサイト向け 無料ホームページテンプレート tp_cool7</title>
+<title>SHAT website</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
