スマホでもリンクに飛べるように修正

--- a/templates/pdfmr/top.html
+++ b/templates/pdfmr/top.html
@@ -35,19 +35,19 @@
 <!-- <li><a href="company.html">会社概要<span>COMPANY</span></a></li>
 <li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
 <li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li> -->
-<li><a href="link.html">リンク<span>STAFF</span></a></li>
-<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
+<li><a href="{% static 'templates2/link.html' %}">リンク<span>STAFF</span></a></li>
+<li><a href="{% static 'templates2/contact.html' %}">お問い合わせ<span>CONTACT</span></a></li>
 </ul>
 </nav>
 <!--小さな端末用（800px以下端末）メニュー-->
 <nav id="menubar-s" style="display: none;">
 <ul>
-<li><a href="index.html">ホーム<span>HOME</span></a></li>
+<li><a href="{% static 'templates2/index.html' %}">ホーム<span>HOME</span></a></li>
 <!-- <li><a href="company.html">会社概要<span>COMPANY</span></a></li>
 <li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
 <li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li> -->
-<li><a href="link.html">リンク<span>STAFF</span></a></li>
-<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
+<li><a href="{% static 'templates2/link.html' %}">リンク<span>STAFF</span></a></li>
+<li><a href="{% static 'templates2/contact.html' %}">お問い合わせ<span>CONTACT</span></a></li>
 </ul>
 </nav>
 
@@ -69,20 +69,9 @@
 <section id="new">
 <h2>更新情報・お知らせ</h2>
 <dl>
-<dt>2018/11/22</dt>
-<dd>tp_cool7配布開始。<span class="newicon">NEW</span></dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
+<dt>2019/2/16</dt>
+<dd>ホームページ作成開始。<span class="newicon">NEW</span></dd>
+
 </dl>
 <p class="r">»&nbsp;<a href="#">過去ログ</a></p>
 </section>
