セリーグのサイトを追加

--- a/templates/pdfmr/top.html
+++ b/templates/pdfmr/top.html
@@ -88,12 +88,12 @@
 <nav>
 <h2>セ・リーグ</h2>
 <ul class="submenu">
-<li><a href="#">巨人</a></li>
-<li><a href="#">DeNA</a></li>
-<li><a href="#">阪神</a></li>
-<li><a href="#">広島</a></li>
-<li><a href="#">中日</a></li>
-<li><a href="#">ヤクルト</a></li>
+	<li><a href="{% static 'templates2/giants.html' %}">巨人</a></li>
+	<li><a href="{% static 'templates2/baystars.html' %}">DeNA</a></li>
+	<li><a href="{% static 'templates2/tigers.html' %}">阪神</a></li>
+	<li><a href="{% static 'templates2/carp.html' %}">広島</a></li>
+	<li><a href="{% static 'templates2/dragons.html' %}">中日</a></li>
+	<li><a href="{% static 'templates2/swallows.html' %}">ヤクルト</a></li>
 </ul>
 </nav>
 
