画像の差し替え・リンクの修正

--- a/templates/pdfmr/top.html
+++ b/templates/pdfmr/top.html
@@ -89,24 +89,24 @@
 <nav>
 <h2>セ・リーグ</h2>
 <ul class="submenu">
-<li><a href="giants.html">巨人</a></li>
-<li><a href="baystars.html">DeNA</a></li>
-<li><a href="tigers.html">阪神</a></li>
-<li><a href="carp.html">広島</a></li>
-<li><a href="dragons.html">中日</a></li>
-<li><a href="swallows.html">ヤクルト</a></li>
+<li><a href="{% static 'templates2/giants.html' %}">巨人</a></li>
+<li><a href="{% static 'templates2/baystars.html' %}">DeNA</a></li>
+<li><a href="{% static 'templates2/tigers.html' %}">阪神</a></li>
+<li><a href="{% static 'templates2/carp.html' %}">広島</a></li>
+<li><a href="{% static 'templates2/dragons.html' %}">中日</a></li>
+<li><a href="{% static 'templates2/swallows.html' %}">ヤクルト</a></li>
 </ul>
 </nav>
 
 <nav>
 <h2>パ・リーグ</h2>
 <ul class="submenu">
-<li><a href="lions.html">西武</a></li>
-<li><a href="softbank.html">ソフトバンク</a></li>
-<li><a href="eagles.html">楽天</a></li>
-<li><a href="marines.html">ロッテ</a></li>
-<li><a href="fighters.html">日本ハム</a></li>
-<li><a href="buffaloes.html">オリックス</a></li>
+<li><a href="{% static 'templates2/lions.html' %}">西武</a></li>
+<li><a href="{% static 'templates2/hawks.html' %}">ソフトバンク</a></li>
+<li><a href="{% static 'templates2/eagles.html' %}">楽天</a></li>
+<li><a href="{% static 'templates2/marines.html' %}">ロッテ</a></li>
+<li><a href="{% static 'templates2/fighters.html' %}">日本ハム</a></li>
+<li><a href="{% static 'templates2/buffaloes.html' %}">オリックス</a></li>
 </ul>
 </nav>
 
@@ -281,7 +281,7 @@ TEL：03-0000-0000<br>
 <!--/footermenu-->
 
 <div id="copyright">
-<small>Copyright© <a href="index.html">プロ野球選手 応援歌</a> All Rights Reserved.</small>
+<small>Copyright© <a href="{% static 'templates2/index.html' %}">プロ野球選手 応援歌</a> All Rights Reserved.</small>
 <span class="pr"><a href="http://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </div>
 
