大幅改良（リンク簡潔化・フォルダ整理）

--- a/templates/pdfmr/hawks.html
+++ b/templates/pdfmr/hawks.html
@@ -1,3 +1,4 @@
+{% load staticfiles %} 
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -7,10 +8,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/slide.css">
-<script type="text/javascript" src="js/openclose.js"></script>
-<script type="text/javascript" src="js/fixmenu_pagetop.js"></script>
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+<link rel="stylesheet" href="{% static 'css/slide.css' %}">
+<script type="text/javascript" src="{% static 'js/openclose.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/fixmenu_pagetop.js' %}"></script>
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -22,25 +23,24 @@
 
 <header>
 	<div class="inner">
-	<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="SAMPLE COMPANY"></a></h1>
+	<h1 id="logo"><a href="top"><img src="{% static 'images/logo.png' %}" alt="SAMPLE COMPANY"></a></h1>
 	</div>
 </header>
 
 <!--PC用（801px以上端末）メニュー-->
 <nav id="menubar">
 	<ul class="inner">
-		<li class="current"><a href="index.html">ホーム<span>HOME</span></a></li>
-		<li><a href="link.html">リンク<span>LINK</span></a></li>
-		<li><a href="contact.html">サイトポリシー<span>SITE POLICY</span></a></li>
+		<li class="current"><a href="top">ホーム<span>HOME</span></a></li>
+		<li><a href="link">リンク<span>LINK</span></a></li>
+		<li><a href="about">このサイトについて<span>ABOUT</span></a></li>
 	</ul>
 </nav>
 <!--小さな端末用（800px以下端末）メニュー-->
 <nav id="menubar-s" style="display: none;">
 	<ul>
-		<li><a href="index.html">ホーム<span>HOME</span></a></li>
-		<li><a href="link.html">リンク<span>LINK</span></a></li>
-		<li><a href="contact.html">サイトポリシー<span>SITE POLICY</span></a></li>
-	</ul>
+		<li><a href="top">ホーム<span>HOME</span></a></li>
+		<li><a href="link">リンク<span>LINK</span></a></li>
+		<li><a href="about">このサイトについて<span>ABOUT</span></a></li>
 </nav>
 
 <div id="contents" class="inner">
@@ -231,24 +231,24 @@
 <nav>
 	<h2>セ・リーグ</h2>
 	<ul class="submenu">
-	<li><a href="giants.html">巨人</a></li>
-	<li><a href="baystars.html">DeNA</a></li>
-	<li><a href="tigers.html">阪神</a></li>
-	<li><a href="carp.html">広島</a></li>
-	<li><a href="dragons.html">中日</a></li>
-	<li><a href="swallows.html">ヤクルト</a></li>
+	<li><a href="giants">巨人</a></li>
+	<li><a href="baystars">DeNA</a></li>
+	<li><a href="tigers">阪神</a></li>
+	<li><a href="carp">広島</a></li>
+	<li><a href="dragons">中日</a></li>
+	<li><a href="swallows">ヤクルト</a></li>
 	</ul>
 	</nav>
 	
 	<nav>
 	<h2>パ・リーグ</h2>
 	<ul class="submenu">
-	<li><a href="lions.html">西武</a></li>
-	<li><a href="hawks.html">ソフトバンク</a></li>
-	<li><a href="eagles.html">楽天</a></li>
-	<li><a href="marines.html">ロッテ</a></li>
-	<li><a href="fighters.html">日本ハム</a></li>
-	<li><a href="buffaloes.html">オリックス</a></li>
+	<li><a href="lions">西武</a></li>
+	<li><a href="hawks">ソフトバンク</a></li>
+	<li><a href="eagles">楽天</a></li>
+	<li><a href="marines">ロッテ</a></li>
+	<li><a href="fighters">日本ハム</a></li>
+	<li><a href="buffaloes">オリックス</a></li>
 	</ul>
 </nav>
 
@@ -272,7 +272,7 @@
 
 
 <div id="copyright">
-<small>Copyright&copy; <a href="index.html">プロ野球選手 応援歌</a> All Rights Reserved.</small>
+<small>Copyright&copy; <a href="top">プロ野球選手 応援歌</a> All Rights Reserved.</small>
 <span class="pr"><a href="http://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </div>
 
