--- a/templates/pdfmr/top.html
+++ b/templates/pdfmr/top.html
@@ -8,10 +8,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
-<link rel="stylesheet" href="{% static 'templates2/css/style.css' %}">
-<link rel="stylesheet" href="{% static 'templates2/css/slide.css' %}">
-<script type="text/javascript" src="{% static 'templates2/js/openclose.js' %}"></script>
-<script type="text/javascript" src="{% static 'templates2/js/fixmenu_pagetop.js' %}"></script>
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+<link rel="stylesheet" href="{% static 'css/slide.css' %}">
+<script type="text/javascript" src="{% static 'js/openclose.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/fixmenu_pagetop.js' %}"></script>
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -22,7 +22,7 @@
 
 <header>
 <div class="inner">
-<h1 id="logo"><a href="{% static 'templates2/index.html' %}"><img src="{% static 'templates2/images/logo.png' %}" alt="SAMPLE COMPANY"></a></h1>
+<h1 id="logo"><a href="top"><img src="{% static 'images/logo.png' %}" alt="SAMPLE COMPANY"></a></h1>
 <div id="contact">
 <!-- <p class="tel">TEL:00-0000-0000<span>受付：00:00〜00:00　定休日：水曜日</span></p> -->
 </div>
@@ -32,23 +32,23 @@
 <!--PC用（801px以上端末）メニュー-->
 <nav id="menubar">
 <ul class="inner">
-<li class="current"><a href="{% static 'templates2/index.html' %}">ホーム<span>HOME</span></a></li>
+<li class="current"><a href="">ホーム<span>HOME</span></a></li>
 <!-- <li><a href="company.html">会社概要<span>COMPANY</span></a></li>
 <li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
 <li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li> -->
-<li><a href="{% static 'templates2/link.html' %}">リンク<span>LINK</span></a></li>
-<li><a href="{% static 'templates2/contact.html' %}">サイトポリシー<span>SITE POLICY</span></a></li>
+<li><a href="link">リンク<span>LINK</span></a></li>
+<li><a href="about">このサイトについて<span>ABOUT</span></a></li>
 </ul>
 </nav>
 <!--小さな端末用（800px以下端末）メニュー-->
 <nav id="menubar-s" style="display: none;">
 <ul>
-<li><a href="{% static 'templates2/index.html' %}">ホーム<span>HOME</span></a></li>
+<li><a href="">ホーム<span>HOME</span></a></li>
 <!-- <li><a href="company.html">会社概要<span>COMPANY</span></a></li>
 <li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
 <li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li> -->
-<li><a href="{% static 'templates2/link.html' %}">リンク<span>LINK</span></a></li>
-<li><a href="{% static 'templates2/contact.html' %}">サイトポリシー<span>SITE POLICY</span></a></li>
+<li><a href="link">リンク<span>LINK</span></a></li>
+<li><a href="about">このサイトについて<span>ABOUT</span></a></li>
 </ul>
 </nav>
 
@@ -60,10 +60,10 @@
 <!--スライドショー-->
 <aside id="mainimg">
 <div class="inner">
-<img src="{% static 'templates2/images/1.jpg' %}" alt="" class="slide0">
-<img src="{% static 'templates2/images/1.jpg' %}" alt="" class="slide1">
-<img src="{% static 'templates2/images/2.jpg' %}" alt="" class="slide2">
-<img src="{% static 'templates2/images/3.jpg' %}" alt="" class="slide3">
+<img src="{% static 'images/1.jpg' %}" alt="" class="slide0">
+<img src="{% static 'images/1.jpg' %}" alt="" class="slide1">
+<img src="{% static 'images/2.jpg' %}" alt="" class="slide2">
+<img src="{% static 'images/3.jpg' %}" alt="" class="slide3">
 </div>
 </aside>
 
@@ -88,26 +88,26 @@
 <div id="sub">
 
 <nav>
-<h2>セ・リーグ</h2>
-<ul class="submenu">
-<li><a href="{% static 'templates2/giants.html' %}">巨人</a></li>
-<li><a href="{% static 'templates2/baystars.html' %}">DeNA</a></li>
-<li><a href="{% static 'templates2/tigers.html' %}">阪神</a></li>
-<li><a href="{% static 'templates2/carp.html' %}">広島</a></li>
-<li><a href="{% static 'templates2/dragons.html' %}">中日</a></li>
-<li><a href="{% static 'templates2/swallows.html' %}">ヤクルト</a></li>
-</ul>
-</nav>
-
-<nav>
-<h2>パ・リーグ</h2>
-<ul class="submenu">
-<li><a href="{% static 'templates2/lions.html' %}">西武</a></li>
-<li><a href="{% static 'templates2/hawks.html' %}">ソフトバンク</a></li>
-<li><a href="{% static 'templates2/eagles.html' %}">楽天</a></li>
-<li><a href="{% static 'templates2/marines.html' %}">ロッテ</a></li>
-<li><a href="{% static 'templates2/fighters.html' %}">日本ハム</a></li>
-<li><a href="{% static 'templates2/buffaloes.html' %}">オリックス</a></li>
+	<h2>セ・リーグ</h2>
+	<ul class="submenu">
+	<li><a href="giants">巨人</a></li>
+	<li><a href="baystars">DeNA</a></li>
+	<li><a href="tigers">阪神</a></li>
+	<li><a href="carp">広島</a></li>
+	<li><a href="dragons">中日</a></li>
+	<li><a href="swallows">ヤクルト</a></li>
+	</ul>
+	</nav>
+	
+	<nav>
+	<h2>パ・リーグ</h2>
+	<ul class="submenu">
+	<li><a href="lions">西武</a></li>
+	<li><a href="hawks">ソフトバンク</a></li>
+	<li><a href="eagles">楽天</a></li>
+	<li><a href="marines">ロッテ</a></li>
+	<li><a href="fighters">日本ハム</a></li>
+	<li><a href="buffaloes">オリックス</a></li>
 </ul>
 </nav>
 
@@ -282,7 +282,7 @@ TEL：03-0000-0000<br>
 <!--/footermenu-->
 
 <div id="copyright">
-<small>Copyright© <a href="{% static 'templates2/index.html' %}">プロ野球選手 応援歌</a> All Rights Reserved.</small>
+<small>Copyright© <a href="top">プロ野球選手 応援歌</a> All Rights Reserved.</small>
 <span class="pr"><a href="http://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </div>
 
