メニューバーを修正・更新情報及びABOUTを加筆

--- a/templates/pdfmr/contact.html
+++ b/templates/pdfmr/contact.html
@@ -30,9 +30,9 @@
 <!--PC用（801px以上端末）メニュー-->
 <nav id="menubar">
 	<ul class="inner">
-		<li class="current"><a href="top">ホーム<span>HOME</span></a></li>
+		<li><a href="top">ホーム<span>HOME</span></a></li>
 		<li><a href="link">リンク<span>LINK</span></a></li>
-		<li><a href="about">このサイトについて<span>ABOUT</span></a></li>
+		<li class="current"><a href="about">このサイトについて<span>ABOUT</span></a></li>
 	</ul>
 </nav>
 <!--小さな端末用（800px以下端末）メニュー-->
@@ -52,7 +52,11 @@
 <section>
 
 <h2>当サイトについて</h2>
-<p>プロ野球全球団の応援歌をまとめたサイトです。</p>
+<p>
+	プロ野球全球団の応援歌をまとめたサイトです。<br>
+	シンプルかつわかりやすく、皆さんが応援歌を覚える際に手助けとなるような応援歌まとめサイトを目指しています。<br>
+	そのため、現時点では現役選手で現在使われている応援歌のみ掲載させて頂いています。<br>
+</p>
 
 <h2>応援歌について</h2>
 <p>
