--- a/templates/pdfmr/top.html
+++ b/templates/pdfmr/top.html
@@ -70,8 +70,10 @@
 <section id="new">
 <h2>更新情報・お知らせ</h2>
 <dl>
+	<dt>2019/3/8</dt>
+	<dd>サイトマップ登録。<span class="newicon">NEW</span></dd>
 	<dt>2019/3/2</dt>
-	<dd>全球団応援歌歌詞の投稿完了。<span class="newicon">NEW</span></dd>
+	<dd>全球団応援歌歌詞の投稿完了。</dd>
 	<dt>2019/2/16</dt>
 	<dd>ホームページ作成開始。</dd>
 </dl>
