--- a/templates/pdfmr/carp.html
+++ b/templates/pdfmr/carp.html
@@ -30,7 +30,7 @@
 <!--PC用（801px以上端末）メニュー-->
 <nav id="menubar">
 	<ul class="inner">
-		<li class="current"><a href="top">ホーム<span>HOME</span></a></li>
+		<li><a href="top">ホーム<span>HOME</span></a></li>
 		<li><a href="link">リンク<span>LINK</span></a></li>
 		<li><a href="about">このサイトについて<span>ABOUT</span></a></li>
 	</ul>
