--- a/templates/pdfmr/link.html
+++ b/templates/pdfmr/link.html
@@ -32,11 +32,11 @@
 <!--PC用（801px以上端末）メニュー-->
 <nav id="menubar">
 	<ul class="inner">
-		<li class="current"><a href="top">ホーム<span>HOME</span></a></li>
+		<li><a href="top">ホーム<span>HOME</span></a></li>
 		<!--<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
 		<li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
 		<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li> -->
-		<li><a href="link">リンク<span>LINK</span></a></li>
+		<li class="current"><a href="link">リンク<span>LINK</span></a></li>
 		<li><a href="about">このサイトについて<span>ABOUT</span></a></li>
 		</ul>
 		</nav>
