投稿画面を追加、eaglesに呪われるエラーあり

--- a/templates/pdfmr/hawks.html
+++ b/templates/pdfmr/hawks.html
@@ -31,16 +31,16 @@
 <nav id="menubar">
 	<ul class="inner">
 		<li><a href="top">ホーム<span>HOME</span></a></li>
+		<li><a href="post">投稿<span>POST</span></a></li>
 		<li><a href="link">リンク<span>LINK</span></a></li>
-		<li><a href="about">このサイトについて<span>ABOUT</span></a></li>
-	</ul>
-</nav>
-<!--小さな端末用（800px以下端末）メニュー-->
-<nav id="menubar-s" style="display: none;">
-	<ul>
+		</ul>
+		</nav>
+		<!--小さな端末用（800px以下端末）メニュー-->
+		<nav id="menubar-s" style="display: none;">
+		<ul>
 		<li><a href="top">ホーム<span>HOME</span></a></li>
+		<li><a href="post">投稿<span>POST</span></a></li>
 		<li><a href="link">リンク<span>LINK</span></a></li>
-		<li><a href="about">このサイトについて<span>ABOUT</span></a></li>
 </nav>
 
 <div id="contents" class="inner">
