--- a/pdfmr/static/css/style.css
+++ b/pdfmr/static/css/style.css
@@ -404,12 +404,13 @@ footer .pr {display: block;font-size: 80%;}
 /*ボックス全体*/
 #footermenu {
 	overflow: hidden;
-	padding: 20px 0;
+	padding: 2px 0;
 }
 /*１行分の設定*/
 #footermenu ul {
 	float: left;	/*左に回り込み*/
-	width: 18%;		/*幅。今回は５列作ったのでここの幅18%と下のpadding(合計の2%)でトータル20%になるよう設定。列に応じて調整して下さい。*/
+	text-align: center;
+	width: 98%;		/*幅。今回は５列作ったのでここの幅18%と下のpadding(合計の2%)でトータル20%になるよう設定。列に応じて調整して下さい。*/
 	padding-right: 1%;
 	padding-left: 1%;
 }
