--- a/templates/pdfmr/post_list.html
+++ b/templates/pdfmr/post_list.html
@@ -22,7 +22,7 @@
 
 <header>
 <div class="inner">
-<h1 id="logo"><a href="top"><img src="{% static 'images/logo.png' %}" alt="SAMPLE COMPANY"></a></h1>
+<h1 id="logo"><a href="{% url 'top' %}"><img src="{% static 'images/logo.png' %}" alt="SAMPLE COMPANY"></a></h1>
 <div id="contact">
 <!-- <p class="tel">TEL:00-0000-0000<span>受付：00:00〜00:00　定休日：水曜日</span></p> -->
 </div>
@@ -32,7 +32,7 @@
 <!--PC用（801px以上端末）メニュー-->
 <nav id="menubar">
 <ul class="inner">
-<li><a href="top">ホーム<span>HOME</span></a></li>
+<li><a href="{% url 'top' %}">ホーム<span>HOME</span></a></li>
 <li class="current"><a href="post">投稿<span>POST</span></a></li>
 <li><a href="link">リンク<span>LINK</span></a></li>
 
@@ -41,7 +41,7 @@
 <!--小さな端末用（800px以下端末）メニュー-->
 <nav id="menubar-s" style="display: none;">
 <ul>
-<li><a href="top">ホーム<span>HOME</span></a></li>
+<li><a href="{% url 'top' %}">ホーム<span>HOME</span></a></li>
 <li><a href="post">投稿<span>POST</span></a></li>
 <li><a href="link">リンク<span>LINK</span></a></li>
 </ul>
@@ -279,7 +279,7 @@ TEL：03-0000-0000<br>
 <!--/footermenu-->
 
 <div id="copyright">
-<small>Copyright© <a href="top">プロ野球選手 応援歌</a> All Rights Reserved.</small>
+<small>Copyright© <a href="{% url 'top' %}">プロ野球選手 応援歌</a> All Rights Reserved.</small>
 <span class="pr"><a href="http://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </div>
 
